add meta information

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="nofollow">
+    <meta name="application-name" content="notespace">
+    <meta name="description" content="Simple little graph-based note-taking app. Take notes, make mind maps, and so on.">
+    <meta name="author" content="Noah Weiner">
+    <link rel="author" content="https://github.com/noaner">
     <title>notespace</title>
   </head>
   <body>
